Add comment for PostgreSQL

--- a/.env
+++ b/.env
@@ -1,8 +1,15 @@
+# MySQL
 DB_PORT=3306
 DB_ROOT_PASSWORD=root
 DB_USER=symfony
 DB_PASSWORD=symfony
 DB_DATABASE=symfony
+
+# PostgreSQL
+#DB_PORT=5432
+#DB_DATABASE=symfony
+#DB_USER=symfony
+#DB_PASSWORD=symfony
 
 NGINX_VIRTUAL_HOST=symfony6-webapp.test
 NGINX_PORT=80
