--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     depends_on:
       - db
   db:
-    image: mysql:8.0
+    image: mysql/mysql-server:8.0
     ports:
       - '${DB_PORT}:3306'
     command: --default-authentication-plugin=mysql_native_password
