--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
     ports:
-      - '${NGINX_PORT}:80'
+      - '${NGINX_PORT:-80}:80'
   nginx:
     build:
       context: ./project/docker/development/nginx
@@ -34,7 +34,7 @@ services:
   db:
     image: mysql/mysql-server:8.0
     ports:
-      - '${DB_PORT}:3306'
+      - '${DB_PORT:-3306}:3306'
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
